fixed small width screen alignment issues with wesmaps

--- a/assets/www/css/wesmaps.css
+++ b/assets/www/css/wesmaps.css
@@ -125,15 +125,15 @@ ul {
   margin-top: 10px;
   margin-bottom: 10px;
   height: 50px;
-  width: 78%;
+  width: 75%;
+  float: left;
 }
 .wm_c_expand {
   display: inline-block;
   height: 60px;
-  width: 8%;
-  float: right;
   margin-top: 5px;
-  margin-right: 15px;
+  position: absolute;
+  right: 5%;
 }
 /* expanded course */
 
@@ -246,7 +246,7 @@ ul {
 }
 #wm_bar {
   display: inline-block;
-  width: 80%;
+  width: 75%;
   height: 70%;
   float: left;
 }
